Fixed recipe card view recipe btn and fav heart spacing

--- a/components/recipes/recipe-list.module.css
+++ b/components/recipes/recipe-list.module.css
@@ -111,7 +111,11 @@
     color: #565555;
 }
 .favHeart {
-    padding-left: 250px;
+    margin: 0;
+}
+
+.viewRecipeBtn {
+    margin: 0;
 }
 
 /*pagination */
